--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.auto.service:auto-service:1.0-rc2'
+    implementation 'com.google.auto.service:auto-service:1.0-rc3'
+    //annotationProcessor 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.7.0'
     implementation project(':annotation')
 }
